# square-root-irrational

./: Cargo.toml  README.md
examples/: stdin.rs
src/: lib.rs  test.rs
