[package]
name = "square-root-irrational"
version = "0.1.0"
edition = "2021"
description = "A rust crate to check if the square root of an integer is rational or not"
authors = ["AdriDoesThings <contact@adridoesthings.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
